--- a/Semana 5/Códigos/BatchJob/src/main/resources/application.properties
+++ b/Semana 5/Códigos/BatchJob/src/main/resources/application.properties
@@ -5,9 +5,11 @@ spring.datasource.password=springstudent
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-server.port=9192
 
 spring.batch.initialize-schema=ALWAYS
+spring.security.user.name=daniel080203
+spring.security.user.password=test123
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+server.port=9192
 
-#disabled job run at startup
 spring.batch.job.enabled=false
