--- a/Semana 5/Códigos/Vacation_System/pom.xml
+++ b/Semana 5/Códigos/Vacation_System/pom.xml
@@ -4,8 +4,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.3.3</version>
-		<relativePath/>
-		<!--  lookup parent from repository  -->
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
   <groupId>Employee_management</groupId>
   <artifactId>Vacation_System</artifactId>
@@ -35,10 +34,10 @@
 <optional>true</optional>
 </dependency>
 <dependency>
-<groupId>com.mysql</groupId>
-<artifactId>mysql-connector-j</artifactId>
-<scope>runtime</scope>
-</dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.33</version> <!-- Usa la versión más reciente disponible -->
+    	</dependency>
 <dependency>
 <groupId>org.projectlombok</groupId>
 <artifactId>lombok</artifactId>
@@ -54,11 +53,11 @@
 <artifactId>spring-batch-test</artifactId>
 <scope>test</scope>
 </dependency>
-<!-- <dependency>
+<dependency>
 <groupId>org.springframework.security</groupId>
 <artifactId>spring-security-test</artifactId>
 <scope>test</scope>
-</dependency>-->
+</dependency>
 </dependencies>
 <build>
 <plugins>
