--- a/Semana 5/Códigos/Vacation_System/src/main/resources/application.properties
+++ b/Semana 5/Códigos/Vacation_System/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-#
-# JDBC properties
-#
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_management
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 spring.batch.initialize-schema=ALWAYS
 spring.security.user.name=daniel080203
 spring.security.user.password=test123
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+spring.batch.job.enabled=false
