--- a/Semana 5/Códigos/Vacation_System/pom.xml
+++ b/Semana 5/Códigos/Vacation_System/pom.xml
@@ -11,6 +11,10 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Employee management</name>
   <dependencies>
+	  <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
 <dependency>
 <groupId>org.springframework.boot</groupId>
 <artifactId>spring-boot-starter-batch</artifactId>
@@ -58,6 +62,11 @@
 <artifactId>spring-security-test</artifactId>
 <scope>test</scope>
 </dependency>
+<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 </dependencies>
 <build>
 <plugins>
