--- a/Semana 5/Códigos/rabbit-reciever/src/main/resources/application.properties
+++ b/Semana 5/Códigos/rabbit-reciever/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_management
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_management?serverTimezone=America/Mexico_City
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 spring.batch.initialize-schema=ALWAYS
-spring.batch.job.enabled=false
+
+server.port=9001
